--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-cart-item/duraform-drawer-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-cart-item/duraform-drawer-cart-item.component.html
@@ -12,6 +12,7 @@
   (click)="onSelect()"
 >
   <tr>
+    <td class="line-number">{{ index }}</td>
     <td>{{ duraformDrawer.quantity }}</td>
     <td>{{ duraformDrawer.height }}</td>
     <td>{{ duraformDrawer.width }}</td>
