--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-form/duraform-drawer-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-form/duraform-drawer-form.component.html
@@ -5,6 +5,9 @@
   (submit)="onSubmit()"
 >
   <tr>
+    <td style="color: #ec092b">
+      <i class="fa fa-hand-o-right" aria-hidden="true"></i>
+    </td>
     <app-duraform-door-basic-input
       appRemoveTag
       [formGroup]="formGroup"
