--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-pantry-door-component-list/duraform-pantry-door-component-list.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-pantry-door-component-list/duraform-pantry-door-component-list.component.html
@@ -4,6 +4,7 @@
     <table class="table table--component-list">
       <thead>
         <tr>
+          <th rowspan="2" style="width: 3rem">#</th>
           <th rowspan="2" style="width: 4rem">Qty</th>
           <th rowspan="2" style="width: 6rem">
             O/A <br />
@@ -38,7 +39,8 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let pantryDoor of pantryDoors">
+        <tr *ngFor="let pantryDoor of pantryDoors; let i = index">
+          <td class="line-number">{{ i + 1 }}</td>
           <td>{{ pantryDoor.quantity }}</td>
           <td>{{ pantryDoor.height }}</td>
           <td>{{ pantryDoor.width }}</td>
