--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/edge-profile-selector/edge-profile-selector.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/edge-profile-selector/edge-profile-selector.component.html
@@ -1,8 +1,6 @@
 <div class="edge-profile-selector" appDropdownBtn="show">
   <div class="profile-name" [ngClass]="{ disabled: !canSelect }">
-    <span *ngIf="!selectedEdgeProfile">
-      -- Select Edge Profile --
-    </span>
+    <span *ngIf="!selectedEdgeProfile"> -- Select Edge Profile -- </span>
     <span *ngIf="selectedEdgeProfile">
       {{ selectedEdgeProfile.name }}
     </span>
