--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-cart-item/end-panel-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/end-panel-cart-item/end-panel-cart-item.component.html
@@ -12,6 +12,7 @@
   (click)="onSelect()"
 >
   <tr>
+    <td class="line-number">{{ index }}</td>
     <td>{{ endPanel.quantity }}</td>
     <td>{{ endPanel.height }}</td>
     <td>{{ endPanel.width }}</td>
