--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-form/pantry-door-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-form/pantry-door-form.component.html
@@ -1,5 +1,8 @@
 <tbody class="form__order-form-group">
   <tr appOrderForm [formGroup]="formGroup" (submit)="onSubmit()">
+    <td style="color: #ec092b">
+      <i class="fa fa-hand-o-right" aria-hidden="true"></i>
+    </td>
     <app-duraform-door-basic-input
       appRemoveTag
       [formGroup]="formGroup"
