--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-cart-item/duraform-door-cart-item.component.html
@@ -12,30 +12,35 @@
   (click)="onSelect()"
 >
   <tr>
-    <td>{{ door.quantity }}</td>
+    <td class="line-number">
+      {{ index }}
+    </td>
+    <td>
+      {{ door.quantity }}
+    </td>
     <td>{{ door.height }}</td>
     <td>{{ door.width }}</td>
-    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem">
       {{ asset.getEdgeProfile(door.duraformEdgeProfileId).name | uppercase }}
     </td>
     <td>{{ door.top ? "Y" : "" }}</td>
     <td>{{ door.bottom ? "Y" : "" }}</td>
     <td>{{ door.left ? "Y" : "" }}</td>
     <td>{{ door.right ? "Y" : "" }}</td>
-    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem">
       {{ door.duraformOption?.toString() | uppercase }}
     </td>
     <td>
       {{ door.hingeHoleOption?.toString() }}
     </td>
-    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem;">
+    <td class="text-left" style="padding-left: 1rem; padding-right: 1rem">
       {{ door.note }}
     </td>
-    <td style="width: 5rem;">
+    <td style="width: 5rem">
       <button
         type="button"
         class="btn btn--secondary"
-        style="padding: 0.5rem 1rem;"
+        style="padding: 0.5rem 1rem"
         (click)="onRemove()"
       >
         <i class="fa fa-trash"></i>
