--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-component-list/duraform-door-component-list.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-component-list/duraform-door-component-list.component.html
@@ -4,24 +4,21 @@
     <table class="table table--component-list">
       <thead>
         <tr>
-          <th rowspan="2" style="width: 4rem;">Qty</th>
-          <th rowspan="2" style="width: 6rem;">Height</th>
-          <th rowspan="2" style="width: 6rem;">Width</th>
+          <th rowspan="2" style="width: 3rem">#</th>
+          <th rowspan="2" style="width: 4rem">Qty</th>
+          <th rowspan="2" style="width: 6rem">Height</th>
+          <th rowspan="2" style="width: 6rem">Width</th>
           <th colspan="4">'X' For Square Edge</th>
-          <th rowspan="2" style="width: 26rem;">Option</th>
-          <th rowspan="2" style="width: 20rem;">
-            Edge Profile
-          </th>
-          <th rowspan="2" style="width: 15rem;">
-            Hinge Hole
-          </th>
+          <th rowspan="2" style="width: 26rem">Option</th>
+          <th rowspan="2" style="width: 20rem">Edge Profile</th>
+          <th rowspan="2" style="width: 15rem">Hinge Hole</th>
           <th rowspan="2">Note</th>
         </tr>
         <tr>
-          <th style="width: 4rem;">T</th>
-          <th style="width: 4rem;">B</th>
-          <th style="width: 4rem;">L</th>
-          <th style="width: 4rem;">R</th>
+          <th style="width: 4rem">T</th>
+          <th style="width: 4rem">B</th>
+          <th style="width: 4rem">L</th>
+          <th style="width: 4rem">R</th>
         </tr>
       </thead>
       <tbody *ngIf="isLoading">
@@ -40,7 +37,8 @@
         </tr>
       </tbody>
       <tbody *ngIf="!isLoading && !hasError">
-        <tr *ngFor="let door of duraformDoors">
+        <tr *ngFor="let door of duraformDoors; let i = index">
+          <td class="line-number">{{ i + 1 }}</td>
           <td>{{ door.quantity }}</td>
           <td>{{ door.height }}</td>
           <td>{{ door.width }}</td>
