--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-form/duraform-door-form.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-form/duraform-door-form.component.html
@@ -5,6 +5,9 @@
   (submit)="onSubmit()"
 >
   <tr>
+    <td style="color: #ec092b">
+      <i class="fa fa-hand-o-right" aria-hidden="true"></i>
+    </td>
     <app-duraform-door-basic-input
       appRemoveTag
       [formGroup]="formGroup"
@@ -28,17 +31,17 @@
       <input
         type="text"
         class="form__control"
-        style="text-align: left; width: 99%;"
+        style="text-align: left; width: 99%"
         appSelectOnFocus
         formControlName="note"
       />
     </td>
-    <td style="width: 5rem;">
+    <td style="width: 5rem">
       <button
         [disabled]="formGroup.invalid"
         type="button"
         class="btn btn--primary"
-        style="padding: 0.5rem 1rem;"
+        style="padding: 0.5rem 1rem"
         (click)="onSubmit()"
       >
         <i class="fa fa-save"></i>
