--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-component-list/duraform-drawer-component-list.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-drawer-component-list/duraform-drawer-component-list.component.html
@@ -4,6 +4,7 @@
     <table class="table table--component-list">
       <thead>
         <tr>
+          <th rowspan="2" style="width: 3rem">#</th>
           <th rowspan="2" style="width: 4rem">Qty</th>
           <th rowspan="2" style="width: 6rem">Height</th>
           <th rowspan="2" style="width: 6rem">Width</th>
@@ -30,7 +31,8 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let drawer of duraformDrawers">
+        <tr *ngFor="let drawer of duraformDrawers; let i = index">
+          <td class="line-number">{{ i + 1 }}</td>
           <td>{{ drawer.quantity }}</td>
           <td>{{ drawer.height }}</td>
           <td>{{ drawer.width }}</td>
