--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-info-box/duraform-info-box.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-info-box/duraform-info-box.component.html
@@ -1,44 +1,33 @@
 <div class="info-box">
-  <div class="duraform-design">
-    <div class="duraform-design__img-box">
-      <div class="img-loader" *ngIf="isLoadingImg">
-        <i class="fa fa-spinner fa-spin"></i>
+  <div class="row">
+    <div class="col-1-3 middle">
+      <div>
+        <div class="info-box__door-name" style="padding-top: 3px">
+          {{ order.selectedDesign.name }}
+        </div>
+        <div class="info-box__profile-name">
+          {{ order.selectedEdgeProfile.name }}
+        </div>
       </div>
-      <img
-        [hidden]="isLoadingImg"
-        src="../../../assets/images/Duraform/Doors/S{{
-          order.selectedSerie.id
-        }}/{{ order.selectedDesign.imageUrl }}"
-        alt="Duraform Door - {{ order.selectedDesign.name }}"
-        (load)="this.isLoadingImg = false"
-      />
     </div>
-    <div class="duraform-design__control-box">
-      <div
-        class="duraform-design__control-box__door-name"
-        style="padding-top: 3px;"
-      >
-        {{ order.selectedDesign.name }}
-      </div>
-      <div class="duraform-design__control-box__profile-name">
-        {{ order.selectedEdgeProfile.name }}
-      </div>
-      <div
-        class="duraform-design__control-box__route-only"
-        *ngIf="order.isRoutingOnly"
-      >
-        ROUTE ONLY
-      </div>
-      <div
-        class="duraform-design__control-box__wrapping"
-        *ngIf="!order.isRoutingOnly"
-      >
-        <div class="wrap-type">
-          {{ order.selectedWrapType.name }}
+    <div class="col-1-3 middle">
+      <div>
+        <div class="info-box__route-only" *ngIf="order.isRoutingOnly">
+          ROUTE ONLY
         </div>
-        <div class="wrap-color">
-          {{ order.selectedWrapColor.name }}
+        <div class="info-box__wrapping" *ngIf="!order.isRoutingOnly">
+          <div class="wrap-type">
+            {{ order.selectedWrapType.name }}
+          </div>
+          <div class="wrap-color">
+            {{ order.selectedWrapColor.name }}
+          </div>
         </div>
+      </div>
+    </div>
+    <div class="col-1-3 middle">
+      <div>
+        <ng-content></ng-content>
       </div>
     </div>
   </div>
