--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-cart-item/pantry-door-cart-item.component.html
@@ -12,6 +12,7 @@
   (click)="onSelect()"
 >
   <tr>
+    <td class="line-number">{{ index }}</td>
     <td>{{ pantryDoor.quantity }}</td>
     <td>{{ pantryDoor.height }}</td>
     <td>{{ pantryDoor.width }}</td>
