--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/pantry-door-tab/pantry-door-tab.component.html
@@ -1,6 +1,7 @@
 <table class="table table--bordered">
   <thead>
     <tr>
+      <th rowspan="2" style="width: 3rem">#</th>
       <th rowspan="2" style="width: 5rem">Qty.</th>
       <th rowspan="2" style="width: 9rem">
         O/A <br />
@@ -57,12 +58,17 @@
       <td></td>
       <td></td>
       <td></td>
+      <td></td>
     </tr>
   </tbody>
   <app-pantry-door-cart-item
     appRemoveTag
-    *ngFor="let pantryDoor of order.pantryDoors"
+    *ngFor="
+      let pantryDoor of order.pantryDoors.slice().reverse();
+      let i = index
+    "
     [pantryDoor]="pantryDoor"
+    [index]="order.pantryDoors.length - i"
     (removePantryDoor)="onRemovePantryDoor($event)"
   ></app-pantry-door-cart-item>
 </table>
