--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/2-base/_ultilities.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/2-base/_ultilities.scss
@@ -1,3 +1,8 @@
+.line-number {
+  font-size: 1.1rem !important;
+  font-weight: normal !important;
+}
+
 .no-style {
   display: contents !important;
 }
