--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/3-component/_duraform-order-step-two.scss
@@ -10,17 +10,52 @@ app-duraform-order-step-two {
   max-height: 100%;
 
   .section-one {
-    display: flex;
     margin-bottom: 1rem;
+    max-width: 80rem;
 
     .info-box {
-      margin-right: 1rem;
-      min-width: 40rem;
+      &__door-name {
+        color: $blue-primary;
+        font-size: 2rem;
+        font-weight: 500;
+        padding-top: 1.5rem;
+      }
+
+      &__profile-name {
+        font-size: 1.6rem;
+        margin-top: 0.3rem;
+        min-height: 1.9rem;
+      }
+
+      &__profile-img {
+        display: block;
+        margin-top: 0.8rem;
+        max-width: 100%;
+      }
+
+      &__route-only {
+        color: $red-primary;
+        font-weight: bold;
+        font-size: 3rem;
+        margin-top: 2rem;
+      }
+
+      &__wrapping {
+        .wrap-type {
+          color: $red-primary;
+          font-size: 2rem;
+          font-weight: 700;
+          margin-bottom: 0.5rem;
+        }
+
+        .wrap-color {
+          font-size: 1.8rem;
+        }
+      }
     }
 
     .options-box {
-      margin-right: 1rem;
-      min-width: 25rem;
+      margin-top: 1.5rem;
     }
   }
 
