- Remove Draw from hinge hole options - Add 1 to number of drawers

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-option-selector/duraform-option-selector.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-option-selector/duraform-option-selector.component.html
@@ -2,7 +2,7 @@
   <button
     type="button"
     class="btn btn--primary edit-btn"
-    style="padding: 0.5rem 1rem;"
+    style="padding: 0.5rem 1rem"
     *ngIf="selectedType"
     (click)="onEditBtnClick()"
   >
@@ -19,7 +19,7 @@
   <button
     type="button"
     class="btn btn--secondary clear-btn"
-    style="padding: 0.5rem 1rem;"
+    style="padding: 0.5rem 1rem"
     *ngIf="selectedType"
     (click)="onClearOption()"
   >
