--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/4-layout/_grid.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/4-layout/_grid.scss
@@ -24,6 +24,10 @@ $col-gap: 1rem;
     }
   }
 
+  .col-1-1 {
+    width: 100%;
+  }
+
   .col-1-2 {
     width: calc((100% - #{$col-gap}) / 2);
   }
