Add selecting edge profile before colour Add validation on number of drawers Add new door design Latsq Fix mapping Panel No Face Rout Search customers with & character Fix edge profile not change in line items

--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-color-selector/duraform-color-selector.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-color-selector/duraform-color-selector.component.html
@@ -7,9 +7,14 @@
             <div class="door-detail">
               <div class="door-detail__name">{{ design.name }}</div>
               <div class="door-detail__profile-name">
-                {{
-                  design.fixedEdgeProfileName || design.defaultEdgeProfileName
-                }}
+                <span *ngIf="selectedEdgeProfile">
+                  {{ selectedEdgeProfile.name }}
+                </span>
+                <span *ngIf="!selectedEdgeProfile">
+                  {{
+                    design.fixedEdgeProfileName || design.defaultEdgeProfileName
+                  }}
+                </span>
               </div>
               <img
                 class="door-detail__profile-img"
