--- a/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
+++ b/JanperCab/5-JanperCab/ClientApp/src/assets/scss/main.scss
@@ -42,6 +42,7 @@
 @import "./3-component/pagination";
 @import "./3-component/heading";
 @import "./3-component/cabinet-maker-list";
+@import "./3-component/edge-profile-menu";
 @import "./4-layout/grid";
 @import "./4-layout/primary-layout";
 @import "./5-page/duraform-page";
