--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/float-box/float-box.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/float-box/float-box.component.html
@@ -1,5 +1,10 @@
 <div class="float-box">
-  <div class="container" [ngStyle]="{ width: width ? width + 'rem' : '50rem' }">
+  <div
+    class="container"
+    [ngStyle]="{
+      width: isFit ? 'fit-content' : width ? width + 'rem' : '50rem'
+    }"
+  >
     <ng-content></ng-content>
   </div>
 </div>
