--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-basic-input/duraform-door-basic-input.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-door-basic-input/duraform-door-basic-input.component.html
@@ -28,8 +28,7 @@
       precision: '0',
       decimal: '',
       prefix: '',
-      thousands: '',
-      max: 2500
+      thousands: ''
     }"
     (keyup)="heightKeyUp.emit()"
   />
@@ -46,8 +45,7 @@
       precision: '0',
       decimal: '',
       prefix: '',
-      thousands: '',
-      max: 2500
+      thousands: ''
     }"
     (input)="widthKeyUp.emit()"
   />
