--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-option-selector/duraform-option-selector.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-option-selector/duraform-option-selector.component.html
@@ -71,6 +71,12 @@
         (valueChange)="onUpdateDisplayValue()"
       >
       </app-duraform-option-roller-shutter>
+      <app-duraform-option-microwave-frame
+        appRemoveTag
+        *ngIf="selectedType.id === typeKeyEnum.MicrowaveFrame"
+        [formGroup]="formGroup"
+        (valueChange)="onUpdateDisplayValue()"
+      ></app-duraform-option-microwave-frame>
     </div>
   </div>
 </div>
