--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-two/duraform-order-step-two.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/duraform-order-step-two/duraform-order-step-two.component.html
@@ -26,6 +26,7 @@
         <li class="header">Pantry Doors</li>
         <li class="header">IB Backs</li>
         <li class="header">Drawers</li>
+        <li class="header">Misc</li>
         <li class="header">Upload Files</li>
       </ul>
       <ul class="tab__pages">
@@ -40,6 +41,9 @@
         </li>
         <li class="page">
           <app-duraform-drawer-tab></app-duraform-drawer-tab>
+        </li>
+        <li class="page">
+          <app-duraform-misc-tab></app-duraform-misc-tab>
         </li>
         <li class="page" style="padding: 1rem">
           <input
