--- a/JanperCab/5-JanperCab/ClientApp/src/app/components/hinge-hole-selector/hinge-hole-selector.component.html
+++ b/JanperCab/5-JanperCab/ClientApp/src/app/components/hinge-hole-selector/hinge-hole-selector.component.html
@@ -15,7 +15,7 @@
       <div class="form__group">
         <label class="form__label">Hinge Hole</label>
         <app-select-menu
-          [control]="sideFormControl"
+          [control]="styleFormControl"
           [values]="options"
           [valueKey]="'value'"
           [valueDisplay]="'text'"
@@ -40,12 +40,13 @@
         <div class="row" [formGroup]="formGroup.get('hingeHole')">
           <div
             [ngClass]="{
+              'col-1-1': quantity.value === 1,
               'col-1-2': quantity.value === 2,
               'col-1-3': quantity.value === 3,
               'col-1-4': quantity.value === 4
             }"
           >
-            <label class="form__label">T</label>
+            <label class="form__label">Top</label>
             <input
               #topInput
               type="text"
@@ -114,13 +115,14 @@
             />
           </div>
           <div
+            *ngIf="quantity.value > 1"
             [ngClass]="{
               'col-1-2': quantity.value === 2,
               'col-1-3': quantity.value === 3,
               'col-1-4': quantity.value === 4
             }"
           >
-            <label class="form__label">B</label>
+            <label class="form__label">Bottom</label>
             <input
               #bottomInput
               type="text"
